<resources>

    <string name="app_name">Customer OnBoard</string>
    <string name="valueAadhar">Aadhar Number</string>
    <string name="valueSSN">SSN</string>
    <string name="or">OR</string>
    <string name="valuePassport">Passport Number</string>
    <string name="passportHint">Passport number</string>
    <string name="ssnHint">SSN</string>
    <string name="altcontnumber">Alternative contact number</string>
    <string name="emailHint">Email address</string>
    <string name="checkDetails">CHECK DETAILS</string>
    <string name="action_settings">Settings</string>
    <string name="verifyText">VERIFY DATA</string>
    <string name="strImgPerson">imgPerson</string>
    <string name="delete_uploaded_item">Delete</string>
    <string name="uploadFilesTxt">Upload Digitally Signed Documents</string>
    <string name="india">India</string>
    <string name="others">Others</string>
    <string name="submitdocs">SUBMIT DOCUMENTS</string>
    <string name="title_activity_plans">PlansActivity</string>
    <string name="prepaidtxt">Prepaid Plan</string>
    <string name="postpaidtxt">Postpaid Plans</string>

</resources>