<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.surendra535268.customeronboard.RegisterCustomerActivity"
    android:background="@color/transparent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutAadhar"
                android:background="@drawable/register_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layoutMarginBottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelAadhar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/labelTextSize"
                    android:text="@string/valueAadhar"
                    android:gravity="center"
                    android:layout_margin="@dimen/margin"
                    android:textStyle="bold"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/aadharEditTextMargin"
                    android:weightSum="3"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:layout_marginRight="@dimen/aadharEditTextMarginRight"
                        android:gravity="center"
                        android:background="@drawable/edit_layout_box">

                        <EditText
                            android:id="@+id/editAadharPart1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLength="1"
                            android:inputType="number"
                            android:textSize="@dimen/valueTextSize"/>
                        <EditText
                            android:id="@+id/editAadharPart2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLength="1"
                            android:inputType="number"
                            android:textSize="@dimen/valueTextSize"/>
                        <EditText
                            android:id="@+id/editAadharPart3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLength="1"
                            android:inputType="number"
                            android:textSize="@dimen/valueTextSize"/>
                        <EditText
                            android:id="@+id/editAadharPart4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLength="1"
                            android:inputType="number"
                            android:textSize="@dimen/valueTextSize"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginRight="@dimen/aadharEditTextMarginRight"
                        android:background="@drawable/edit_layout_box">

                        <EditText
                            android:id="@+id/editAadharPart5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLength="1"
                            android:inputType="number"
                            android:textSize="@dimen/valueTextSize"/>
                        <EditText
                            android:id="@+id/editAadharPart6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLength="1"
                            android:inputType="number"
                            android:textSize="@dimen/valueTextSize"/>
                        <EditText
                            android:id="@+id/editAadharPart7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLength="1"
                            android:inputType="number"
                            android:textSize="@dimen/valueTextSize"/>
                        <EditText
                            android:id="@+id/editAadharPart8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLength="1"
                            android:inputType="number"
                            android:textSize="@dimen/valueTextSize"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="@drawable/edit_layout_box">

                        <EditText
                            android:id="@+id/editAadharPart9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLength="1"
                            android:inputType="number"
                            android:textSize="@dimen/valueTextSize"/>
                        <EditText
                            android:id="@+id/editAadharPart10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLength="1"
                            android:inputType="number"
                            android:textSize="@dimen/valueTextSize"/>
                        <EditText
                            android:id="@+id/editAadharPart11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLength="1"
                            android:inputType="number"
                            android:textSize="@dimen/valueTextSize"/>
                        <EditText
                            android:id="@+id/editAadharPart12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLength="1"
                            android:inputType="number"
                            android:textSize="@dimen/valueTextSize"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <View
                    android:layout_width="100dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="#ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/valueTextSize"
                    android:text="@string/or"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"/>

                <View
                    android:layout_width="100dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:background="#ffffff"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPassport"
                android:background="@drawable/register_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelPassport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/labelTextSize"
                    android:text="@string/valuePassport"
                    android:gravity="center"
                    android:layout_margin="@dimen/margin"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/editPassport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/valueTextSize"
                    android:inputType="number"
                    android:hint="@string/passportHint"
                    android:padding="@dimen/margin"
                    android:gravity="center"
                    android:layout_margin="@dimen/passportMargin"
                    android:background="@drawable/edit_layout_box"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layoutAlternativeContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editAltContNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/valueTextSize"
                    android:inputType="number"
                    android:padding="@dimen/margin"
                    android:gravity="center"
                    android:hint="@string/altcontnumber"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_marginBottom="@dimen/margin"
                    android:background="@drawable/edit_layout_box"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/valueTextSize"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/margin"
                    android:gravity="center"
                    android:hint="@string/emailHint"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_marginBottom="@dimen/margin"
                    android:background="@drawable/edit_layout_box"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutFetchDetailsButton"
                android:background="@drawable/register_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnFetchDetails"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/valueTextSize"
                    android:padding="@dimen/margin"
                    android:gravity="center"
                    android:text="@string/checkDetails"
                    android:background="@drawable/edit_layout_box"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
